--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.App-content {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -28,11 +18,13 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ContainerForm{
+  display: flex;
+  flex-direction: column;
+  height: 20vh;
+  padding: 5% 0;
+}
+.ContainerForm form{
+  display: flex;
+  flex-direction: column;
 }
